# look-alike

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/look_alike/: app.py  config.py  face_recognition_service.py  image_utils.py  logger.py  routes.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ImageUpload.tsx  JudgeButton.tsx  ResultDisplay.tsx
frontend/app/components/ui/: Button.tsx  Card.tsx
frontend/app/hooks/: useFaceComparison.ts  useImageUpload.ts  useProgress.ts
frontend/app/services/: api.ts
frontend/app/types/: index.ts
frontend/app/utils/: score.ts  styles.ts
