[project]
name = "look-alike"
version = "0.1.0"
description = ""
authors = [
    { name = "AnD00", email = "19258109+AnD00@users.noreply.github.com" },
]
readme = ""
requires-python = ">=3.11,<4.0"
dependencies = [
    "deepface (>=0.0.93,<0.0.94)",
    "flask (>=3.1.1,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "numpy (>=2.1.0,<2.2.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "tf-keras (>=2.19.0,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
